--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node dist/index.js",
+    "start": "node build/index.js",
     "start:dev": "concurrently \"npx tsc --watch\" \"nodemon -q build/index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
