--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pg": "^8.10.0",
-    "sequelize-typescript": "^2.1.5"
+    "sequelize-typescript": "^2.1.5",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
